// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 4개 선택 후 상태 스냅샷 > mbti-bottom-section-completed 1`] = `
<div
  class="flex flex-col gap-4"
>
  <h1
    class="w-full text-left text-2xl"
  >
    나를 
    <span
      class="font-bold"
    >
      더
    </span>
     알려주고 싶어요.
  </h1>
  <div
    class="w-full h-full gap-1"
  >
    <input
      class="w-full h-[3rem] border border-gray-300 rounded-xl py-2 px-3 focus:outline-primary-300"
      placeholder="캠핑, 불멍, 서핑"
      value=""
    />
  </div>
  <a
    data-discover="true"
    href="/festivals"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-primary-300 text-gray-50 text-md rounded-xl px-5 py-3 text-lg "
      type="button"
    >
      추천 받기
    </button>
  </a>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 4개 선택 후 상태 스냅샷 > mbti-question1-completed 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-2"
>
  <p
    class="text-lg text-left w-full"
  >
    이번에 나는
  </p>
  <div
    class="flex items-center justify-center gap-4 w-full"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-primary-300 text-gray-50 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      새로운 곳
    </button>
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      익숙한 곳
    </button>
  </div>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 4개 선택 후 상태 스냅샷 > mbti-question2-completed 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-2"
>
  <p
    class="text-lg text-left w-full"
  >
    여행갈 때
  </p>
  <div
    class="flex items-center justify-center gap-4 w-full"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-primary-300 text-gray-50 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      혼자
    </button>
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      함께
    </button>
  </div>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 4개 선택 후 상태 스냅샷 > mbti-question3-completed 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-2"
>
  <p
    class="text-lg text-left w-full"
  >
    여행에서
  </p>
  <div
    class="flex items-center justify-center gap-4 w-full"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-primary-300 text-gray-50 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      즐거움을
    </button>
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      유익함을
    </button>
  </div>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 4개 선택 후 상태 스냅샷 > mbti-question4-completed 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-2"
>
  <p
    class="text-lg text-left w-full"
  >
    여행을
  </p>
  <div
    class="flex items-center justify-center gap-4 w-full"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-primary-300 text-gray-50 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      즉흥적으로
    </button>
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      계획적으로
    </button>
  </div>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 초기 상태 스냅샷 > mbti-bottom-section-initial 1`] = `
<div
  class="flex flex-col gap-4"
>
  <h1
    class="w-full text-left text-2xl"
  >
    나를 
    <span
      class="font-bold"
    >
      더
    </span>
     알려주고 싶어요.
  </h1>
  <div
    class="w-full h-full gap-1"
  >
    <input
      class="w-full h-[3rem] border border-gray-300 rounded-xl py-2 px-3 focus:outline-primary-300"
      placeholder="캠핑, 불멍, 서핑"
      value=""
    />
  </div>
  <a
    data-discover="true"
    href="/festivals"
  >
    <button
      class="flex items-center justify-center w-full cursor-not-allowed bg-primary-300 text-gray-50 text-md rounded-xl px-5 py-3 text-lg opacity-50"
      disabled=""
      type="button"
    >
      추천 받기
    </button>
  </a>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 초기 상태 스냅샷 > mbti-question1-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-2"
>
  <p
    class="text-lg text-left w-full"
  >
    이번에 나는
  </p>
  <div
    class="flex items-center justify-center gap-4 w-full"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      새로운 곳
    </button>
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      익숙한 곳
    </button>
  </div>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 초기 상태 스냅샷 > mbti-question2-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-2"
>
  <p
    class="text-lg text-left w-full"
  >
    여행갈 때
  </p>
  <div
    class="flex items-center justify-center gap-4 w-full"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      혼자
    </button>
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      함께
    </button>
  </div>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 초기 상태 스냅샷 > mbti-question3-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-2"
>
  <p
    class="text-lg text-left w-full"
  >
    여행에서
  </p>
  <div
    class="flex items-center justify-center gap-4 w-full"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      즐거움을
    </button>
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      유익함을
    </button>
  </div>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 초기 상태 스냅샷 > mbti-question4-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-2"
>
  <p
    class="text-lg text-left w-full"
  >
    여행을
  </p>
  <div
    class="flex items-center justify-center gap-4 w-full"
  >
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      즉흥적으로
    </button>
    <button
      class="flex items-center justify-center w-full cursor-pointer bg-gray-100 text-gray-600 text-md rounded-xl px-5 py-3 flex-1 font-bold "
      type="button"
    >
      계획적으로
    </button>
  </div>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > MBTI 선택 화면 - 초기 상태 스냅샷 > mbti-title-section-initial 1`] = `
<div
  class="flex flex-col gap-1"
>
  <h2
    class="w-full text-left text-xl text-gray-500"
  >
    당신에 대해 알려주세요!
  </h2>
  <h1
    class="w-full text-left text-2xl"
  >
    당신의 
    <span
      class="font-bold"
    >
      여행 MBTI
    </span>
    를
    <br />
    선택해 주세요.
  </h1>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-button-section-completed 1`] = `
<button
  class="flex items-center justify-center w-full cursor-pointer bg-primary-300 text-gray-50 text-md rounded-xl px-5 py-3 text-lg "
  type="button"
>
  다음
</button>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-1-전통 문화-selected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="전통 문화"
    class="size-[100px] rounded-lg border-3 border-primary-300 object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/tradition.svg"
  />
  <p
    class="text-lg font-bold"
  >
    전통 문화
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-2-예술/공연-selected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="예술/공연"
    class="size-[100px] rounded-lg border-3 border-primary-300 object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/art.svg"
  />
  <p
    class="text-lg font-bold"
  >
    예술/공연
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-3-먹거리-selected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="먹거리"
    class="size-[100px] rounded-lg border-3 border-primary-300 object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/food.svg"
  />
  <p
    class="text-lg font-bold"
  >
    먹거리
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-4-자연/경관-unselected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="자연/경관"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/nature.svg"
  />
  <p
    class="text-lg "
  >
    자연/경관
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-5-체험/참여-unselected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="체험/참여"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/experience.svg"
  />
  <p
    class="text-lg "
  >
    체험/참여
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-6-트렌디-unselected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="트렌디"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/trendy.svg"
  />
  <p
    class="text-lg "
  >
    트렌디
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-7-커뮤니티-unselected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="커뮤니티"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/community.svg"
  />
  <p
    class="text-lg "
  >
    커뮤니티
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-8-지역특색-unselected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="지역특색"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/local.svg"
  />
  <p
    class="text-lg "
  >
    지역특색
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 3개 선택 후 상태 스냅샷 > style-card-9-국제-unselected 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="국제"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/international.svg"
  />
  <p
    class="text-lg "
  >
    국제
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-button-section-initial 1`] = `
<button
  class="flex items-center justify-center w-full cursor-not-allowed bg-primary-300 text-gray-50 text-md rounded-xl px-5 py-3 text-lg opacity-50"
  disabled=""
  type="button"
>
  다음
</button>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-1-전통 문화-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="전통 문화"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/tradition.svg"
  />
  <p
    class="text-lg "
  >
    전통 문화
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-2-예술/공연-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="예술/공연"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/art.svg"
  />
  <p
    class="text-lg "
  >
    예술/공연
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-3-먹거리-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="먹거리"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/food.svg"
  />
  <p
    class="text-lg "
  >
    먹거리
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-4-자연/경관-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="자연/경관"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/nature.svg"
  />
  <p
    class="text-lg "
  >
    자연/경관
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-5-체험/참여-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="체험/참여"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/experience.svg"
  />
  <p
    class="text-lg "
  >
    체험/참여
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-6-트렌디-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="트렌디"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/trendy.svg"
  />
  <p
    class="text-lg "
  >
    트렌디
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-7-커뮤니티-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="커뮤니티"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/community.svg"
  />
  <p
    class="text-lg "
  >
    커뮤니티
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-8-지역특색-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="지역특색"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/local.svg"
  />
  <p
    class="text-lg "
  >
    지역특색
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-card-9-국제-initial 1`] = `
<div
  class="w-full h-full flex flex-col items-center justify-center gap-3"
>
  <img
    alt="국제"
    class="size-[100px] rounded-lg  object-cover bg-transparent border-2 border-gray-900"
    src="/pickStyle/international.svg"
  />
  <p
    class="text-lg "
  >
    국제
  </p>
</div>
`;

exports[`PickPage 테스트 > 스냅샷 테스트 > 스타일 선택 화면 - 초기 상태 스냅샷 > style-title-section-initial 1`] = `
<div
  class="flex flex-col items-center gap-1"
>
  <h2
    class="w-full text-left text-xl text-gray-500"
  >
    당신에 대해 알려주세요!
  </h2>
  <h1
    class="w-full text-left text-2xl"
  >
    즐기고 싶은 
    <span
      class="font-bold"
    >
      축제의 스타일
    </span>
    을
    <br />
    선택해 주세요. 
    <span
      class="text-gray-500 text-sm"
    >
      (최대 3개)
    </span>
  </h1>
</div>
`;
